[project]
name = "auto-audio-depth-estimation"
version = "0.2.0"
description = "Auto Audio Depth Estimation - autonomous hypothesis-driven research for depth estimation from binaural echoes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "Pillow>=9.4.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
